<resources>
    <string name="app_name">UiPayPal</string>
    <string name="trade_activity">Enviar</string>
    <string name="person_string">Perfil</string>
    <string name="receive">Recibir</string>
    <string name="today">HOY</string>
    <string name="nina_te_ha">Nina te ha enviado</string>
    <string name="ver_details">VER DETALLES</string>
    <string name="message">Mensaje</string>
    <string name="por_la">Por la cenaqqweqwewqewq</string>
    <string name="_20_00">20,00€</string>
    <string name="de_nuevo">Enviar de nuevo</string>
    <string name="todo">TODO</string>
    <string name="activity">Actividad</string>
    <string name="see_all">Ver más movimientos</string>
    <string name="review_and_submit">Revisar y enviar</string>
    <string name="demo_name">David Paz</string>
    <string name="demo_email">davidpaz@correo.com</string>
    <string name="este_es_el_din213ero_de_la_en21312321213213tradas">Este es el din213ero de la en21312321213213tradas…</string>
    <string name="icon_movie_action">🎬</string>
    <string name="personal">Personal</string>
    <string name="name_card">BBVA</string>
    <string name="_9898">****9898</string>
    <string name="transaction_fees">Tarifas por transacción</string>
    <string name="master_pay">Tú pagas</string>
    <string name="bank_accounts_and_cards">Cuentas bancarias y tarjetas</string>
    <string name="message_1">Mantenemos tus datos financieros protegidos para que nadie vea la información confidencial.</string>
    <string name="myCards">Mis tarjetas</string>
    <string name="mastercard">Mastercard</string>
</resources>