<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".review_and_submit.ReviewAndSubmitActivity">

    <include layout="@layout/actionbar_review_and_submit" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="45dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="17dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_user_review_submit"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/border_radius_50dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/user_image4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:layout_marginEnd="27dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_but_chi"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name_review_and_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/demo_name"
                        android:textColor="#1b1b1b"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/image_user_review_submit" />

                    <TextView
                        android:id="@+id/email_review_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/demo_email"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name_review_and_submit" />

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="39dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/background_green_radius"
                        android:gravity="center"
                        android:text="@string/_20_00"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/image_user_review_submit" />

                    <TextView
                        android:id="@+id/textview5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/message"
                        android:textSize="11sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_review_submit" />

                    <TextView
                        android:layout_width="231dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/este_es_el_din213ero_de_la_en21312321213213tradas"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="39dp"
                        android:text="@string/icon_movie_action"
                        android:textColor="#022c59"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textview5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="283dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="17dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:layout_constraintTop_toBottomOf="@id/card_view2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_dasted_bottom"
                        android:paddingBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="Tipo de pago "
                            android:textColor="#1b1b1b"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:drawableRight="@drawable/ic_arrow_right_black_18_dp_copy_2"
                            android:gravity="center_vertical"
                            android:text="@string/personal"
                            android:textColor="#666666"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_dasted_bottom"
                        android:paddingBottom="16dp">
                
                        <ImageView
                            android:id="@+id/logo_card"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/border_radius_50dp"
                            android:src="@drawable/ic_logo_card"
                            android:layout_marginTop="13dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/name_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_card"
                            android:textColor="#1b1b1b"
                            android:fontFamily="@font/montserrat_semibold"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@id/logo_card"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_9898"
                            android:textSize="14sp"
                            android:textColor="#999999"
                            android:layout_marginStart="16dp"
                            app:layout_constraintStart_toEndOf="@id/logo_card"
                            app:layout_constraintTop_toBottomOf="@+id/name_card" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_arrow_right_black_18_dp_copy_2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="12dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_dasted_bottom"
                        android:paddingBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/transaction_fees"
                            android:textColor="#1b1b1b"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="0,00€"
                            android:textColor="#666666"
                            android:layout_marginTop="21dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/master_pay"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="#1b1b1b"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/_20_00"
                            android:textColor="#00d090"
                            android:layout_marginTop="21dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_button_review_submit"
                android:fontFamily="@font/montserrat_bold"
                android:text="ENVIAR AHORA"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/card_view3" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</LinearLayout>