<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="69dp"
    android:layout_marginStart="21dp"
    android:layout_marginEnd="17dp"
    android:layout_marginBottom="18dp"
    android:background="@color/white">


    <ImageView
        android:id="@+id/image_card_list"
        android:layout_width="46dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_mastercard_2" />

    <TextView
        android:id="@+id/category_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/image_card_list"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/mastercard"
        android:textColor="#1b1b1b"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/code_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_card"
        android:layout_marginStart="31dp"
        android:layout_toEndOf="@id/image_card_list"
        android:text="@string/_9898"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/btn_popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="11dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_popup_menu" />

    <LinearLayout
        android:id="@+id/popup_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_border_top_bottom_right"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_edit"
            android:backgroundTint="#003087"
            android:elevation="3dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:backgroundTint="#025ed7"
            android:background="@drawable/background_border_top_bottom_right"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="-5dp"
            android:scaleType="centerInside"
            android:elevation="2dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/popup_menu_btn_esc"
            android:layout_width="37dp"
            android:layout_height="match_parent"
            android:backgroundTint="#006eff"
            android:background="@drawable/background_border_top_bottom_right"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="-5dp"

            android:scaleType="centerInside"
            android:src="@drawable/ic_esc"
            android:contentDescription="@string/todo" />

    </LinearLayout>


</RelativeLayout>